header alignment fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,6 @@ body{
      opacity: 1;
 }
 
-
 .bs-docs-header {
     box-sizing: border-box;
     color: rgb(129, 181, 221);
@@ -23,7 +22,6 @@ body{
     position: relative;
     text-align: left;
     text-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 0px;
-    width: 1901px;
     perspective-origin: 950.5px 128px;
     transform-origin: 950.5px 128px;
     background-color: rgb(220,204,166);
